# ai-workspace

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: d597e8a5dce2_initial_schema.py
apps/api/app/: __init__.py  config.py  dependencies.py  main.py
apps/api/app/core/: __init__.py  database.py  redis.py  security.py  vector_store.py
apps/api/app/models/: __init__.py  agent.py  chat.py  database.py  document.py  workspace.py
apps/api/app/routers/: __init__.py  agent.py  chat.py  documents.py  rag.py  workspaces.py
apps/api/app/services/: __init__.py  agent_service.py  chat_service.py  document_service.py  embedding_service.py  rag_service.py  workspace_service.py
apps/api/app/tasks/: __init__.py  broker.py  ingestion.py
apps/api/tests/: __init__.py  conftest.py  test_chat.py  test_documents.py  test_rag.py
apps/web/: nuxt.config.ts  package-lock.json  package.json
apps/web/app/assets/css/: main.css
apps/web/app/components/: AppHeader.vue  AppSidebar.vue  BaseButton.vue  BaseCard.vue  BaseModal.vue
apps/web/app/layouts/: default.vue
apps/web/app/pages/: agents.vue  chat.vue  documents.vue  index.vue
apps/web/app/stores/: workspace.ts
apps/web/server/api/: chat.post.ts
rust/parser/: Cargo.toml  Dockerfile
rust/parser/src/: main.rs
rust/parser/src/models/: document.rs  mod.rs
rust/parser/src/parsers/: chunker.rs  code.rs  csv.rs  markdown.rs  mod.rs  pdf.rs
rust/parser/src/routes/: health.rs  mod.rs  parse.rs
